// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\apis\\PetApi.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

import { Observable } from 'rxjs';
import { map } from 'rxjs/operators';
import { BaseAPI, HttpHeaders, HttpQuery, throwIfNullOrUndefined, encodeURI, RequestOpts, ResponseArgs, ProgressResponse, StandardResponse } from '../runtime';
import {
    ApiResponse,
    Pet,
} from '../models';

export type AddPetRequest = {
    pet: Pet;
}

export type AddPetResponse =
  | StandardResponse<405, void>
  | StandardResponse<\\"other\\">;

export type DeletePetRequest = {
    petId: number;
    apiKey?: string;
}

export type DeletePetResponse =
  | StandardResponse<400, void>
  | StandardResponse<404, void>
  | StandardResponse<\\"other\\">;

export type FindPetsByStatusRequest = {
    status: Array<FindPetsByStatusStatusEnum>;
}

export type FindPetsByStatusResponse =
  | StandardResponse<200, Array<Pet>>
  | StandardResponse<400, void>
  | StandardResponse<\\"other\\">;

export type FindPetsByTagsRequest = {
    tags: Array<string>;
}

export type FindPetsByTagsResponse =
  | StandardResponse<200, Array<Pet>>
  | StandardResponse<400, void>
  | StandardResponse<\\"other\\">;

export type GetPetByIdRequest = {
    petId: number;
}

export type GetPetByIdResponse =
  | StandardResponse<200, Pet>
  | StandardResponse<400, void>
  | StandardResponse<404, void>
  | StandardResponse<\\"other\\">;

export type UpdatePetRequest = {
    pet: Pet;
}

export type UpdatePetResponse =
  | StandardResponse<400, void>
  | StandardResponse<404, void>
  | StandardResponse<405, void>
  | StandardResponse<\\"other\\">;

export type UpdatePetWithFormRequest = {
    petId: number;
    name?: string;
    status?: string;
}

export type UpdatePetWithFormResponse =
  | StandardResponse<405, void>
  | StandardResponse<\\"other\\">;

export type UploadFileRequest = {
    petId: number;
    body?: Blob;
}

export type UploadFileResponse =
  | StandardResponse<200, ApiResponse>
  | StandardResponse<\\"other\\">;

/**
 * no description
 */
export class PetApiRequests {

    /**
     * Add a new pet to the store
     */
    static readonly addPet = ({ pet }: AddPetRequest): RequestOpts => {
        throwIfNullOrUndefined(pet, 'addPet');

        const headers: HttpHeaders = {
            'Content-Type': 'application/json',
            // oauth required
            ...(this.configuration.accessToken != null
                ? { Authorization: typeof this.configuration.accessToken === 'function'
                    ? this.configuration.accessToken('petstore_auth', ['write:pets', 'read:pets'])
                    : this.configuration.accessToken }
                : undefined
            ),
        };

        return {
            path: '/pet',
            method: 'POST',
            headers,
            body: pet,
        };
    };

    /**
     * Deletes a pet
     */
    static readonly deletePet = ({ petId, apiKey }: DeletePetRequest): RequestOpts => {
        throwIfNullOrUndefined(petId, 'deletePet');

        const headers: HttpHeaders = {
            ...(apiKey != null ? { 'api_key': String(apiKey) } : undefined),
            // oauth required
            ...(this.configuration.accessToken != null
                ? { Authorization: typeof this.configuration.accessToken === 'function'
                    ? this.configuration.accessToken('petstore_auth', ['write:pets', 'read:pets'])
                    : this.configuration.accessToken }
                : undefined
            ),
        };

        return {
            path: '/pet/{petId}'.replace('{petId}', encodeURI(petId)),
            method: 'DELETE',
            headers,
        };
    };

    /**
     * Multiple status values can be provided with comma separated strings
     * Finds Pets by status
     */
    static readonly findPetsByStatus = ({ status }: FindPetsByStatusRequest): RequestOpts => {
        throwIfNullOrUndefined(status, 'findPetsByStatus');

        const headers: HttpHeaders = {
            // oauth required
            ...(this.configuration.accessToken != null
                ? { Authorization: typeof this.configuration.accessToken === 'function'
                    ? this.configuration.accessToken('petstore_auth', ['write:pets', 'read:pets'])
                    : this.configuration.accessToken }
                : undefined
            ),
        };

        const query: HttpQuery = { // required parameters are used directly since they are already checked by throwIfNullOrUndefined
            'status': status,
        };

        return {
            path: '/pet/findByStatus',
            method: 'GET',
            headers,
            query,
        };
    };

    /**
     * Muliple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
     * Finds Pets by tags
     */
    static readonly findPetsByTags = ({ tags }: FindPetsByTagsRequest): RequestOpts => {
        throwIfNullOrUndefined(tags, 'findPetsByTags');

        const headers: HttpHeaders = {
            // oauth required
            ...(this.configuration.accessToken != null
                ? { Authorization: typeof this.configuration.accessToken === 'function'
                    ? this.configuration.accessToken('petstore_auth', ['write:pets', 'read:pets'])
                    : this.configuration.accessToken }
                : undefined
            ),
        };

        const query: HttpQuery = { // required parameters are used directly since they are already checked by throwIfNullOrUndefined
            'tags': tags,
        };

        return {
            path: '/pet/findByTags',
            method: 'GET',
            headers,
            query,
        };
    };

    /**
     * Returns a single pet
     * Find pet by ID
     */
    static readonly getPetById = ({ petId }: GetPetByIdRequest): RequestOpts => {
        throwIfNullOrUndefined(petId, 'getPetById');

        const headers: HttpHeaders = {
            ...(this.configuration.apiKey && { 'api_key': this.configuration.apiKey('api_key') }), // api_key authentication
        };

        return {
            path: '/pet/{petId}'.replace('{petId}', encodeURI(petId)),
            method: 'GET',
            headers,
        };
    };

    /**
     * Update an existing pet
     */
    static readonly updatePet = ({ pet }: UpdatePetRequest): RequestOpts => {
        throwIfNullOrUndefined(pet, 'updatePet');

        const headers: HttpHeaders = {
            'Content-Type': 'application/json',
            // oauth required
            ...(this.configuration.accessToken != null
                ? { Authorization: typeof this.configuration.accessToken === 'function'
                    ? this.configuration.accessToken('petstore_auth', ['write:pets', 'read:pets'])
                    : this.configuration.accessToken }
                : undefined
            ),
        };

        return {
            path: '/pet',
            method: 'PUT',
            headers,
            body: pet,
        };
    };

    /**
     * Updates a pet in the store with form data
     */
    static readonly updatePetWithForm = ({ petId, name, status }: UpdatePetWithFormRequest): RequestOpts => {
        throwIfNullOrUndefined(petId, 'updatePetWithForm');

        const headers: HttpHeaders = {
            // oauth required
            ...(this.configuration.accessToken != null
                ? { Authorization: typeof this.configuration.accessToken === 'function'
                    ? this.configuration.accessToken('petstore_auth', ['write:pets', 'read:pets'])
                    : this.configuration.accessToken }
                : undefined
            ),
        };

        const formData = new FormData();
        if (name !== undefined) { formData.append('name', name as any); }
        if (status !== undefined) { formData.append('status', status as any); }

        return {
            path: '/pet/{petId}'.replace('{petId}', encodeURI(petId)),
            method: 'POST',
            headers,
            body: formData,
        };
    };

    /**
     * uploads an image
     */
    static readonly uploadFile = ({ petId, body }: UploadFileRequest): RequestOpts => {
        throwIfNullOrUndefined(petId, 'uploadFile');

        const headers: HttpHeaders = {
            'Content-Type': 'application/octet-stream',
            // oauth required
            ...(this.configuration.accessToken != null
                ? { Authorization: typeof this.configuration.accessToken === 'function'
                    ? this.configuration.accessToken('petstore_auth', ['write:pets', 'read:pets'])
                    : this.configuration.accessToken }
                : undefined
            ),
        };

        return {
            path: '/pet/{petId}/uploadImage'.replace('{petId}', encodeURI(petId)),
            method: 'POST',
            headers,
            body: body as any,
        };
    };

}

/**
 * no description
 */
export class PetApi extends BaseAPI {

    /**
     * Add a new pet to the store
     */
    addPet(params: AddPetRequest): Observable<AddPetResponse>;
    addPet(params: AddPetRequest, includeProgress: boolean): Observable<AddPetResponse | ProgressResponse>;
    addPet(params: AddPetRequest, includeProgress = false) {
        return this.executeRequest(PetApiRequests.addPet(params), this.addPetResponseConversion, includeProgress);
    }

    private readonly addPetResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        405,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as AddPetResponse;

    /**
     * Deletes a pet
     */
    deletePet(params: DeletePetRequest): Observable<DeletePetResponse>;
    deletePet(params: DeletePetRequest, includeProgress: boolean): Observable<DeletePetResponse | ProgressResponse>;
    deletePet(params: DeletePetRequest, includeProgress = false) {
        return this.executeRequest(PetApiRequests.deletePet(params), this.deletePetResponseConversion, includeProgress);
    }

    private readonly deletePetResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        400,
                        404,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as DeletePetResponse;

    /**
     * Multiple status values can be provided with comma separated strings
     * Finds Pets by status
     */
    findPetsByStatus(params: FindPetsByStatusRequest): Observable<FindPetsByStatusResponse>;
    findPetsByStatus(params: FindPetsByStatusRequest, includeProgress: boolean): Observable<FindPetsByStatusResponse | ProgressResponse>;
    findPetsByStatus(params: FindPetsByStatusRequest, includeProgress = false) {
        return this.executeRequest(PetApiRequests.findPetsByStatus(params), this.findPetsByStatusResponseConversion, includeProgress);
    }

    private readonly findPetsByStatusResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                        400,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as FindPetsByStatusResponse;

    /**
     * Muliple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
     * Finds Pets by tags
     */
    findPetsByTags(params: FindPetsByTagsRequest): Observable<FindPetsByTagsResponse>;
    findPetsByTags(params: FindPetsByTagsRequest, includeProgress: boolean): Observable<FindPetsByTagsResponse | ProgressResponse>;
    findPetsByTags(params: FindPetsByTagsRequest, includeProgress = false) {
        return this.executeRequest(PetApiRequests.findPetsByTags(params), this.findPetsByTagsResponseConversion, includeProgress);
    }

    private readonly findPetsByTagsResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                        400,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as FindPetsByTagsResponse;

    /**
     * Returns a single pet
     * Find pet by ID
     */
    getPetById(params: GetPetByIdRequest): Observable<GetPetByIdResponse>;
    getPetById(params: GetPetByIdRequest, includeProgress: boolean): Observable<GetPetByIdResponse | ProgressResponse>;
    getPetById(params: GetPetByIdRequest, includeProgress = false) {
        return this.executeRequest(PetApiRequests.getPetById(params), this.getPetByIdResponseConversion, includeProgress);
    }

    private readonly getPetByIdResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                        400,
                        404,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as GetPetByIdResponse;

    /**
     * Update an existing pet
     */
    updatePet(params: UpdatePetRequest): Observable<UpdatePetResponse>;
    updatePet(params: UpdatePetRequest, includeProgress: boolean): Observable<UpdatePetResponse | ProgressResponse>;
    updatePet(params: UpdatePetRequest, includeProgress = false) {
        return this.executeRequest(PetApiRequests.updatePet(params), this.updatePetResponseConversion, includeProgress);
    }

    private readonly updatePetResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        400,
                        404,
                        405,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as UpdatePetResponse;

    /**
     * Updates a pet in the store with form data
     */
    updatePetWithForm(params: UpdatePetWithFormRequest): Observable<UpdatePetWithFormResponse>;
    updatePetWithForm(params: UpdatePetWithFormRequest, includeProgress: boolean): Observable<UpdatePetWithFormResponse | ProgressResponse>;
    updatePetWithForm(params: UpdatePetWithFormRequest, includeProgress = false) {
        return this.executeRequest(PetApiRequests.updatePetWithForm(params), this.updatePetWithFormResponseConversion, includeProgress);
    }

    private readonly updatePetWithFormResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        405,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as UpdatePetWithFormResponse;

    /**
     * uploads an image
     */
    uploadFile(params: UploadFileRequest): Observable<UploadFileResponse>;
    uploadFile(params: UploadFileRequest, includeProgress: boolean): Observable<UploadFileResponse | ProgressResponse>;
    uploadFile(params: UploadFileRequest, includeProgress = false) {
        return this.executeRequest(PetApiRequests.uploadFile(params), this.uploadFileResponseConversion, includeProgress);
    }

    private readonly uploadFileResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as UploadFileResponse;

}

/**
 * @export
 * @enum {string}
 */
export enum FindPetsByStatusStatusEnum {
    Available = 'available',
    Pending = 'pending',
    Sold = 'sold'
}
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\apis\\StoreApi.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

import { Observable } from 'rxjs';
import { map } from 'rxjs/operators';
import { BaseAPI, HttpHeaders, throwIfNullOrUndefined, encodeURI, RequestOpts, ResponseArgs, ProgressResponse, StandardResponse } from '../runtime';
import {
    Order,
} from '../models';

export type DeleteOrderRequest = {
    orderId: number;
}

export type DeleteOrderResponse =
  | StandardResponse<400, void>
  | StandardResponse<404, void>
  | StandardResponse<\\"other\\">;

export type GetInventoryResponse =
  | StandardResponse<200, { [key: string]: number; }>
  | StandardResponse<\\"other\\">;

export type GetOrderByIdRequest = {
    orderId: number;
}

export type GetOrderByIdResponse =
  | StandardResponse<200, Order>
  | StandardResponse<400, void>
  | StandardResponse<404, void>
  | StandardResponse<\\"other\\">;

export type PlaceOrderRequest = {
    order: Order;
}

export type PlaceOrderResponse =
  | StandardResponse<200, Order>
  | StandardResponse<400, void>
  | StandardResponse<\\"other\\">;

/**
 * no description
 */
export class StoreApiRequests {

    /**
     * For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
     * Delete purchase order by ID
     */
    static readonly deleteOrder = ({ orderId }: DeleteOrderRequest): RequestOpts => {
        throwIfNullOrUndefined(orderId, 'deleteOrder');

        return {
            path: '/store/order/{orderId}'.replace('{orderId}', encodeURI(orderId)),
            method: 'DELETE',
        };
    };

    /**
     * Returns a map of status codes to quantities
     * Returns pet inventories by status
     */
    static readonly getInventory = (): RequestOpts => {
        const headers: HttpHeaders = {
            ...(this.configuration.apiKey && { 'api_key': this.configuration.apiKey('api_key') }), // api_key authentication
        };

        return {
            path: '/store/inventory',
            method: 'GET',
            headers,
        };
    };

    /**
     * For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
     * Find purchase order by ID
     */
    static readonly getOrderById = ({ orderId }: GetOrderByIdRequest): RequestOpts => {
        throwIfNullOrUndefined(orderId, 'getOrderById');

        return {
            path: '/store/order/{orderId}'.replace('{orderId}', encodeURI(orderId)),
            method: 'GET',
        };
    };

    /**
     * Place an order for a pet
     */
    static readonly placeOrder = ({ order }: PlaceOrderRequest): RequestOpts => {
        throwIfNullOrUndefined(order, 'placeOrder');

        const headers: HttpHeaders = {
            'Content-Type': 'application/json',
        };

        return {
            path: '/store/order',
            method: 'POST',
            headers,
            body: order,
        };
    };

}

/**
 * no description
 */
export class StoreApi extends BaseAPI {

    /**
     * For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
     * Delete purchase order by ID
     */
    deleteOrder(params: DeleteOrderRequest): Observable<DeleteOrderResponse>;
    deleteOrder(params: DeleteOrderRequest, includeProgress: boolean): Observable<DeleteOrderResponse | ProgressResponse>;
    deleteOrder(params: DeleteOrderRequest, includeProgress = false) {
        return this.executeRequest(StoreApiRequests.deleteOrder(params), this.deleteOrderResponseConversion, includeProgress);
    }

    private readonly deleteOrderResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        400,
                        404,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as DeleteOrderResponse;

    /**
     * Returns a map of status codes to quantities
     * Returns pet inventories by status
     */
    getInventory(): Observable<GetInventoryResponse>;
    getInventory(includeProgress: boolean): Observable<GetInventoryResponse | ProgressResponse>;
    getInventory(includeProgress = false) {
        return this.executeRequest(StoreApiRequests.getInventory(), this.getInventoryResponseConversion, includeProgress);
    }

    private readonly getInventoryResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as GetInventoryResponse;

    /**
     * For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
     * Find purchase order by ID
     */
    getOrderById(params: GetOrderByIdRequest): Observable<GetOrderByIdResponse>;
    getOrderById(params: GetOrderByIdRequest, includeProgress: boolean): Observable<GetOrderByIdResponse | ProgressResponse>;
    getOrderById(params: GetOrderByIdRequest, includeProgress = false) {
        return this.executeRequest(StoreApiRequests.getOrderById(params), this.getOrderByIdResponseConversion, includeProgress);
    }

    private readonly getOrderByIdResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                        400,
                        404,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as GetOrderByIdResponse;

    /**
     * Place an order for a pet
     */
    placeOrder(params: PlaceOrderRequest): Observable<PlaceOrderResponse>;
    placeOrder(params: PlaceOrderRequest, includeProgress: boolean): Observable<PlaceOrderResponse | ProgressResponse>;
    placeOrder(params: PlaceOrderRequest, includeProgress = false) {
        return this.executeRequest(StoreApiRequests.placeOrder(params), this.placeOrderResponseConversion, includeProgress);
    }

    private readonly placeOrderResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                        400,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as PlaceOrderResponse;

}
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\apis\\UserApi.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

import { Observable } from 'rxjs';
import { map } from 'rxjs/operators';
import { BaseAPI, HttpHeaders, HttpQuery, throwIfNullOrUndefined, encodeURI, RequestOpts, ResponseArgs, ProgressResponse, StandardResponse } from '../runtime';
import {
    User,
} from '../models';

export type CreateUserRequest = {
    user: User;
}

export type CreateUserResponse =
  | StandardResponse<\\"other\\", void>;

export type CreateUsersWithArrayInputRequest = {
    user: Array<User>;
}

export type CreateUsersWithArrayInputResponse =
  | StandardResponse<\\"other\\", void>;

export type CreateUsersWithListInputRequest = {
    user: Array<User>;
}

export type CreateUsersWithListInputResponse =
  | StandardResponse<\\"other\\", void>;

export type DeleteUserRequest = {
    username: string;
}

export type DeleteUserResponse =
  | StandardResponse<400, void>
  | StandardResponse<404, void>
  | StandardResponse<\\"other\\">;

export type GetUserByNameRequest = {
    username: string;
}

export type GetUserByNameResponse =
  | StandardResponse<200, User>
  | StandardResponse<400, void>
  | StandardResponse<404, void>
  | StandardResponse<\\"other\\">;

export type LoginUserRequest = {
    username: string;
    password: string;
}

export type LoginUserResponse =
  | StandardResponse<200, string>
  | StandardResponse<400, void>
  | StandardResponse<\\"other\\">;

export type LogoutUserResponse =
  | StandardResponse<\\"other\\", void>;

export type UpdateUserRequest = {
    username: string;
    user: User;
}

export type UpdateUserResponse =
  | StandardResponse<400, void>
  | StandardResponse<404, void>
  | StandardResponse<\\"other\\">;

/**
 * no description
 */
export class UserApiRequests {

    /**
     * This can only be done by the logged in user.
     * Create user
     */
    static readonly createUser = ({ user }: CreateUserRequest): RequestOpts => {
        throwIfNullOrUndefined(user, 'createUser');

        const headers: HttpHeaders = {
            'Content-Type': 'application/json',
        };

        return {
            path: '/user',
            method: 'POST',
            headers,
            body: user,
        };
    };

    /**
     * Creates list of users with given input array
     */
    static readonly createUsersWithArrayInput = ({ user }: CreateUsersWithArrayInputRequest): RequestOpts => {
        throwIfNullOrUndefined(user, 'createUsersWithArrayInput');

        const headers: HttpHeaders = {
            'Content-Type': 'application/json',
        };

        return {
            path: '/user/createWithArray',
            method: 'POST',
            headers,
            body: user,
        };
    };

    /**
     * Creates list of users with given input array
     */
    static readonly createUsersWithListInput = ({ user }: CreateUsersWithListInputRequest): RequestOpts => {
        throwIfNullOrUndefined(user, 'createUsersWithListInput');

        const headers: HttpHeaders = {
            'Content-Type': 'application/json',
        };

        return {
            path: '/user/createWithList',
            method: 'POST',
            headers,
            body: user,
        };
    };

    /**
     * This can only be done by the logged in user.
     * Delete user
     */
    static readonly deleteUser = ({ username }: DeleteUserRequest): RequestOpts => {
        throwIfNullOrUndefined(username, 'deleteUser');

        return {
            path: '/user/{username}'.replace('{username}', encodeURI(username)),
            method: 'DELETE',
        };
    };

    /**
     * Get user by user name
     */
    static readonly getUserByName = ({ username }: GetUserByNameRequest): RequestOpts => {
        throwIfNullOrUndefined(username, 'getUserByName');

        return {
            path: '/user/{username}'.replace('{username}', encodeURI(username)),
            method: 'GET',
        };
    };

    /**
     * Logs user into the system
     */
    static readonly loginUser = ({ username, password }: LoginUserRequest): RequestOpts => {
        throwIfNullOrUndefined(username, 'loginUser');
        throwIfNullOrUndefined(password, 'loginUser');

        const query: HttpQuery = { // required parameters are used directly since they are already checked by throwIfNullOrUndefined
            'username': username,
            'password': password,
        };

        return {
            path: '/user/login',
            method: 'GET',
            query,
        };
    };

    /**
     * Logs out current logged in user session
     */
    static readonly logoutUser = (): RequestOpts => {
        return {
            path: '/user/logout',
            method: 'GET',
        };
    };

    /**
     * This can only be done by the logged in user.
     * Updated user
     */
    static readonly updateUser = ({ username, user }: UpdateUserRequest): RequestOpts => {
        throwIfNullOrUndefined(username, 'updateUser');
        throwIfNullOrUndefined(user, 'updateUser');

        const headers: HttpHeaders = {
            'Content-Type': 'application/json',
        };

        return {
            path: '/user/{username}'.replace('{username}', encodeURI(username)),
            method: 'PUT',
            headers,
            body: user,
        };
    };

}

/**
 * no description
 */
export class UserApi extends BaseAPI {

    /**
     * This can only be done by the logged in user.
     * Create user
     */
    createUser(params: CreateUserRequest): Observable<CreateUserResponse>;
    createUser(params: CreateUserRequest, includeProgress: boolean): Observable<CreateUserResponse | ProgressResponse>;
    createUser(params: CreateUserRequest, includeProgress = false) {
        return this.executeRequest(UserApiRequests.createUser(params), this.createUserResponseConversion, includeProgress);
    }

    private readonly createUserResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as CreateUserResponse;

    /**
     * Creates list of users with given input array
     */
    createUsersWithArrayInput(params: CreateUsersWithArrayInputRequest): Observable<CreateUsersWithArrayInputResponse>;
    createUsersWithArrayInput(params: CreateUsersWithArrayInputRequest, includeProgress: boolean): Observable<CreateUsersWithArrayInputResponse | ProgressResponse>;
    createUsersWithArrayInput(params: CreateUsersWithArrayInputRequest, includeProgress = false) {
        return this.executeRequest(UserApiRequests.createUsersWithArrayInput(params), this.createUsersWithArrayInputResponseConversion, includeProgress);
    }

    private readonly createUsersWithArrayInputResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as CreateUsersWithArrayInputResponse;

    /**
     * Creates list of users with given input array
     */
    createUsersWithListInput(params: CreateUsersWithListInputRequest): Observable<CreateUsersWithListInputResponse>;
    createUsersWithListInput(params: CreateUsersWithListInputRequest, includeProgress: boolean): Observable<CreateUsersWithListInputResponse | ProgressResponse>;
    createUsersWithListInput(params: CreateUsersWithListInputRequest, includeProgress = false) {
        return this.executeRequest(UserApiRequests.createUsersWithListInput(params), this.createUsersWithListInputResponseConversion, includeProgress);
    }

    private readonly createUsersWithListInputResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as CreateUsersWithListInputResponse;

    /**
     * This can only be done by the logged in user.
     * Delete user
     */
    deleteUser(params: DeleteUserRequest): Observable<DeleteUserResponse>;
    deleteUser(params: DeleteUserRequest, includeProgress: boolean): Observable<DeleteUserResponse | ProgressResponse>;
    deleteUser(params: DeleteUserRequest, includeProgress = false) {
        return this.executeRequest(UserApiRequests.deleteUser(params), this.deleteUserResponseConversion, includeProgress);
    }

    private readonly deleteUserResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        400,
                        404,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as DeleteUserResponse;

    /**
     * Get user by user name
     */
    getUserByName(params: GetUserByNameRequest): Observable<GetUserByNameResponse>;
    getUserByName(params: GetUserByNameRequest, includeProgress: boolean): Observable<GetUserByNameResponse | ProgressResponse>;
    getUserByName(params: GetUserByNameRequest, includeProgress = false) {
        return this.executeRequest(UserApiRequests.getUserByName(params), this.getUserByNameResponseConversion, includeProgress);
    }

    private readonly getUserByNameResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                        400,
                        404,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as GetUserByNameResponse;

    /**
     * Logs user into the system
     */
    loginUser(params: LoginUserRequest): Observable<LoginUserResponse>;
    loginUser(params: LoginUserRequest, includeProgress: boolean): Observable<LoginUserResponse | ProgressResponse>;
    loginUser(params: LoginUserRequest, includeProgress = false) {
        return this.executeRequest(UserApiRequests.loginUser(params), this.loginUserResponseConversion, includeProgress);
    }

    private readonly loginUserResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        200,
                        400,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as LoginUserResponse;

    /**
     * Logs out current logged in user session
     */
    logoutUser(): Observable<LogoutUserResponse>;
    logoutUser(includeProgress: boolean): Observable<LogoutUserResponse | ProgressResponse>;
    logoutUser(includeProgress = false) {
        return this.executeRequest(UserApiRequests.logoutUser(), this.logoutUserResponseConversion, includeProgress);
    }

    private readonly logoutUserResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as LogoutUserResponse;

    /**
     * This can only be done by the logged in user.
     * Updated user
     */
    updateUser(params: UpdateUserRequest): Observable<UpdateUserResponse>;
    updateUser(params: UpdateUserRequest, includeProgress: boolean): Observable<UpdateUserResponse | ProgressResponse>;
    updateUser(params: UpdateUserRequest, includeProgress = false) {
        return this.executeRequest(UserApiRequests.updateUser(params), this.updateUserResponseConversion, includeProgress);
    }

    private readonly updateUserResponseConversion = (res: ResponseArgs) => ({
                    statusCode: [
                        400,
                        404,
                    ].indexOf(res.status) === -1 ? 'other' : res.status,
                    data: res.response,
                    response: res,
                }) as UpdateUserResponse;

}
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\apis\\index.ts 1`] = `
"/* eslint-disable */
export * from './PetApi';
export * from './StoreApi';
export * from './UserApi';
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\index.ts 1`] = `
"/* eslint-disable */
export * from './runtime';
export * from './apis';
export * from './models';
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\models\\ApiResponse.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

/* eslint-disable */
/**
 * @export
 * @interface ApiResponse
 */
export interface ApiResponse {
    /**
     * @type {number}
     * @memberof ApiResponse
     */
    code?: number;
    /**
     * @type {string}
     * @memberof ApiResponse
     */
    type?: string;
    /**
     * @type {string}
     * @memberof ApiResponse
     */
    message?: string;
}
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\models\\Category.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

/* eslint-disable */
/**
 * @export
 * @interface Category
 */
export interface Category {
    /**
     * @type {number}
     * @memberof Category
     */
    id?: number;
    /**
     * @type {string}
     * @memberof Category
     */
    name?: string;
}
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\models\\InlineObject.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

/* eslint-disable */
/**
 * @export
 * @interface InlineObject
 */
export interface InlineObject {
    /**
     * Updated name of the pet
     * @type {string}
     * @memberof InlineObject
     */
    name?: string;
    /**
     * Updated status of the pet
     * @type {string}
     * @memberof InlineObject
     */
    status?: string;
}
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\models\\Order.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

/* eslint-disable */
/**
 * @export
 * @interface Order
 */
export interface Order {
    /**
     * @type {number}
     * @memberof Order
     */
    id?: number;
    /**
     * @type {number}
     * @memberof Order
     */
    petId?: number;
    /**
     * @type {number}
     * @memberof Order
     */
    quantity?: number;
    /**
     * @type {Date}
     * @memberof Order
     */
    shipDate?: Date;
    /**
     * Order Status
     * @type {string}
     * @memberof Order
     */
    status?: OrderStatusEnum;
    /**
     * @type {boolean}
     * @memberof Order
     */
    complete?: boolean;
}

/**
 * @export
 * @enum {string}
 */
export enum OrderStatusEnum {
    Placed = 'placed',
    Approved = 'approved',
    Delivered = 'delivered'
}

"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\models\\Pet.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

/* eslint-disable */
import {
    Category,
    Tag,
} from './';

/**
 * @export
 * @interface Pet
 */
export interface Pet {
    /**
     * @type {number}
     * @memberof Pet
     */
    id?: number;
    /**
     * @type {Category}
     * @memberof Pet
     */
    category?: Category;
    /**
     * @type {string}
     * @memberof Pet
     */
    name: string;
    /**
     * @type {Array<string>}
     * @memberof Pet
     */
    photoUrls: Array<string>;
    /**
     * @type {Array<Tag>}
     * @memberof Pet
     */
    tags?: Array<Tag>;
    /**
     * pet status in the store
     * @type {string}
     * @memberof Pet
     */
    status?: PetStatusEnum;
}

/**
 * @export
 * @enum {string}
 */
export enum PetStatusEnum {
    Available = 'available',
    Pending = 'pending',
    Sold = 'sold'
}

"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\models\\Tag.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

/* eslint-disable */
/**
 * @export
 * @interface Tag
 */
export interface Tag {
    /**
     * @type {number}
     * @memberof Tag
     */
    id?: number;
    /**
     * @type {string}
     * @memberof Tag
     */
    name?: string;
}
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\models\\User.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

/* eslint-disable */
/**
 * @export
 * @interface User
 */
export interface User {
    /**
     * @type {number}
     * @memberof User
     */
    id?: number;
    /**
     * @type {string}
     * @memberof User
     */
    username?: string;
    /**
     * @type {string}
     * @memberof User
     */
    firstName?: string;
    /**
     * @type {string}
     * @memberof User
     */
    lastName?: string;
    /**
     * @type {string}
     * @memberof User
     */
    email?: string;
    /**
     * @type {string}
     * @memberof User
     */
    password?: string;
    /**
     * @type {string}
     * @memberof User
     */
    phone?: string;
    /**
     * User Status
     * @type {number}
     * @memberof User
     */
    userStatus?: number;
}
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\models\\index.ts 1`] = `
"/* eslint-disable */
export * from './ApiResponse';
export * from './Category';
export * from './InlineObject';
export * from './Order';
export * from './Pet';
export * from './Tag';
export * from './User';
"
`;

exports[`typescript-rxjs petstore.yaml can generate the files: C:\\Users\\mattd\\Source\\openapi-codegen\\generators\\typescript-rxjs\\out.local.petstore3\\runtime.ts 1`] = `
"/* eslint-disable */
/**
 * Swagger Petstore
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * The version of the OpenAPI document: 1.0.0
 * Contact: apiteam@swagger.io
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Templates provided by Principle. (https://github.com/mdekrey/principle-studios-openapi-generators)
 * Do not edit the class manually.
 */

import { Observable, Subject, Subscriber, merge } from 'rxjs';
import { ajax, AjaxRequest, AjaxResponse } from 'rxjs/ajax';
import { map, shareReplay, takeUntil } from 'rxjs/operators';

export const BASE_PATH = 'http://petstore.swagger.io/api'.replace(/\\\\/+$/, '');

export type StandardResponse<TStatusCode extends (number | 'other'), TResponseType = unknown> =
    {
        statusCode: TStatusCode;
        data: TResponseType;
        response: ResponseArgs;
    };
export type ProgressResponse = { statusCode: 'progress'; data: ProgressEvent; };

export type ConfigurationParameters = {
    basePath: string; // override base path
    username: string | undefined; // parameter for basic security
    password: string | undefined; // parameter for basic security
    apiKey: undefined | string | ((name: string) => string); // parameter for apiKey security
    accessToken: undefined | string | ((name?: string, scopes?: string[]) => string); // parameter for oauth2 security
    rxjsRequest: (params: RequestArgs) => Observable<AjaxResponse>;
};

export class Configuration {
    readonly basePath: string;
    readonly username: string | undefined;
    readonly password: string | undefined;
    readonly apiKey: string | ((name: string) => string) | undefined;
    readonly accessToken: string | ((name?: string | undefined, scopes?: string[] | undefined) => string) | undefined;
    readonly rxjsRequest: (params: RequestArgs) => Observable<AjaxResponse>;

    constructor(configuration: Partial<ConfigurationParameters> = {}) {
        this.basePath = configuration.basePath || BASE_PATH;
        this.username = configuration.username || undefined;
        this.password = configuration.password || undefined;
        this.apiKey = configuration.apiKey || undefined;
        this.accessToken = configuration.accessToken || undefined;
        this.rxjsRequest = configuration.rxjsRequest || ajax;
    }
}

/**
 * This is the base class for all generated API classes.
 */
export class BaseAPI {

    constructor(protected configuration = new Configuration()) {
    }

    protected executeRequest<T extends StandardResponse<any, any>>(requestOpts: RequestOpts, transform: (res: AjaxResponse) => T): Observable<T>;
    protected executeRequest<T extends StandardResponse<any, any>>(requestOpts: RequestOpts, transform: (res: AjaxResponse) => T, includeProgress: boolean): Observable<T | ProgressResponse>;
    protected executeRequest<T extends StandardResponse<any, any>>(requestOpts: RequestOpts, transform: (res: AjaxResponse) => T, includeProgress = false) {
        if (!includeProgress)
            return this.configuration.rxjsRequest(this.createRequestArgs(requestOpts)).pipe(map(transform));
        const progressSubject = new Subject<ProgressEvent>();
        const progress = new Subscriber<ProgressEvent>(
            progressEvent => progressSubject.next(progressEvent),
            error => progressSubject.error(error),
            () => progressSubject.complete()
        );
        const result = this.configuration.rxjsRequest({ ...this.createRequestArgs(requestOpts), progressSubscriber: progress }).pipe(map(transform), shareReplay(1));
        return merge(progressSubject.pipe(takeUntil(result), map((ev): ProgressResponse => ({ statusCode: 'progress', data: ev }))), result);
    }

    private readonly createRequestArgs = (requestOpts: RequestOpts): RequestArgs => {
        let url = this.configuration.basePath + requestOpts.path;
        if (requestOpts.query !== undefined && Object.keys(requestOpts.query).length !== 0) {
            // only add the queryString to the URL if there are query parameters.
            // this is done to avoid urls ending with a '?' character which buggy webservers
            // do not handle correctly sometimes.
            url += '?' + queryString(requestOpts.query);
        }

        return {
            url,
            method: requestOpts.method,
            headers: requestOpts.headers,
            body: requestOpts.body instanceof FormData ? requestOpts.body : JSON.stringify(requestOpts.body),
            responseType: requestOpts.responseType || 'json',
        };
    }
}

/**
 * @deprecated
 * export for not being a breaking change
 */
export class RequiredError extends Error {
    name: 'RequiredError' = 'RequiredError';
}

export const COLLECTION_FORMATS = {
    csv: ',',
    ssv: ' ',
    tsv: '\\\\t',
    pipes: '|',
};

export type Json = any;
export type HttpMethod = 'GET' | 'POST' | 'PUT' | 'PATCH' | 'DELETE' | 'OPTIONS' | 'HEAD';
export type HttpHeaders = { [key: string]: string };
export type HttpQuery = Partial<{ [key: string]: string | number | null | boolean | Array<string | number | null | boolean> }>; // partial is needed for strict mode
export type HttpBody = Json | FormData;

export interface RequestOpts {
    path: string;
    method: HttpMethod;
    headers?: HttpHeaders;
    query?: HttpQuery;
    body?: HttpBody;
    responseType?: 'json' | 'blob' | 'arraybuffer' | 'text';
}

export const encodeURI = (value: any) => encodeURIComponent(String(value));

const queryString = (params: HttpQuery): string => Object.keys(params)
    .map((key) => {
        const value = params[key];
        return (value instanceof Array)
            ? value.map((val) => \`\${encodeURI(key)}=\${encodeURI(val)}\`).join('&')
            : \`\${encodeURI(key)}=\${encodeURI(value)}\`;
    })
    .join('&');

// alias fallback for not being a breaking change
export const querystring = queryString;

/**
 * @deprecated
 */
export const throwIfRequired = (params: {[key: string]: any}, key: string, nickname: string) => {
    if (!params || params[key] == null) {
        throw new RequiredError(\`Required parameter \${key} was null or undefined when calling \${nickname}.\`);
    }
};

export const throwIfNullOrUndefined = (value: any, nickname?: string) => {
    if (value == null) {
        throw new Error(\`Parameter \\"\${value}\\" was null or undefined when calling \\"\${nickname}\\".\`);
    }
};

// alias for easier importing
export type RequestArgs = AjaxRequest;
export type ResponseArgs = AjaxResponse;
"
`;
